# extfix-gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: mainapp.cpp  processing.hpp
src/mainapp/: mainapp.cpp  mainapp.hpp  mainframe.cpp  mainframe.hpp
src/mainframe/: events.hpp  handlers.cpp  mainframe.cpp  mainframe.hpp  processing.cpp
